@@ -33,6 +33,7 @@ Version 1.0.8.5
      * Added some more Keywords for robots.txt highlighting (BenBE)
      * Added Git commands for bash, ifup/ifdown (BenBE)
      * Added support for C# and VB.net delegates (SF#2832253, BenBE)
+     * Added support for line numbers, file handles and hex\octal numbers for QBasic (BenBE)
 Version 1.0.8.4
   -  Added language files
      * BibTeX (Quinn Taylor)
